Changes
=======

2.1.0 (unreleased)
------------------

Bug fixes:

- Prevent crash when serializing a number > 1e100 to WKT with GEOS < 3.13. (#1907)
- Fixes GeoJSON serialization of empty points (#2118)
- Fixes `__geo_interface__` handling of empty points (#2120)

Improvements:

- Require GEOS >= 3.9, NumPy >= 1.20, and Python >= 3.9 (#1802, #1885, #2124)
- Handle ``Feature`` type in ``shapely.geometry.shape`` (#1815)
- Add a ``handle_nan`` parameter to ``shapely.linestrings()`` and ``shapely.linearrings()``
  to allow, skip, or error on nonfinite (NaN / Inf) coordinates. The default
  behaviour (allow) is backwards compatible (#1594).
- Add an ``interleaved`` parameter to ``shapely.transform()`` allowing a transposed call
  signature in the ``transformation`` function.
- The ``include_z`` in ``shapely.transform()`` now also allows ``None``, which
  lets it automatically detect the dimensionality of each input geometry.
- Add parameters ``method`` and ``keep_collapsed`` to ``shapely.make_valid()`` (#1941)
- Upgraded the GEOS version in the binary wheel distributions to 3.12.1.
- Add ``disjoint_subset_union`` and ``disjoint_subset_union_all`` as an optimized
  version of union and union_all, assuming inputs can be divided into subsets that do
  not intersect. Requires at least GEOS 3.12.
- The ``voronoi_polygons`` now accepts the ``ordered`` keyword, optionally forcing the
  order of polygons within the GeometryCollection to follow the order of input
  coordinates. Requires at least GEOS 3.12. (#1968)
- Add option on ``invalid="fix"`` to ``from_wkb`` and ``from_wkt`` (#2094)
- Add function ``minimum_clearance_line`` (#2106)
- Add function ``maximum_inscribed_circle`` (#1307)
- Add function ``orient_polygons`` (#2147)
- Add function ``coverage_simplify`` to allow topological simplification of polygonal
  coverages (#1969)

Breaking changes in GEOS 3.12:

- ``oriented_envelope`` / ``minimum_rotated_rectangle`` changed its implementation